Feat/money transfer transactions (#2)
* added dump.rdb

* added user foreign key to balances

* fixed user-balances relationship

* finalized fund transfer grpc/rest
